--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <main>
             <h1 class="text-center">New site incoming!</h1>
             <figure>
-                <img src="./build.png" alt="Site under constructions">
+                <img src="./assets/Images/build.png" alt="Site under constructions">
                 <figcaption class="text-center">Welcome to our new site! Make sure to check back for updates on our official launch date!</figcaption>
             </figure>
             <section id="contact">
